; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_shade.c_split_curve.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/fitz/extr_shade.c_split_curve.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { float, float }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.TYPE_5__*, %struct.TYPE_5__*, %struct.TYPE_5__*, i32)* @split_curve to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @split_curve(%struct.TYPE_5__* %0, %struct.TYPE_5__* %1, %struct.TYPE_5__* %2, i32 %3) #0 {
  %5 = alloca %struct.TYPE_5__*, align 8
  %6 = alloca %struct.TYPE_5__*, align 8
  %7 = alloca %struct.TYPE_5__*, align 8
  %8 = alloca i32, align 4
  %9 = alloca float, align 4
  %10 = alloca float, align 4
  store %struct.TYPE_5__* %0, %struct.TYPE_5__** %5, align 8
  store %struct.TYPE_5__* %1, %struct.TYPE_5__** %6, align 8
  store %struct.TYPE_5__* %2, %struct.TYPE_5__** %7, align 8
  store i32 %3, i32* %8, align 4
  %11 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %12 = load i32, i32* %8, align 4
  %13 = mul nsw i32 1, %12
  %14 = sext i32 %13 to i64
  %15 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %11, i64 %14
  %16 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %15, i32 0, i32 0
  %17 = load float, float* %16, align 4
  %18 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %19 = load i32, i32* %8, align 4
  %20 = mul nsw i32 2, %19
  %21 = sext i32 %20 to i64
  %22 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %18, i64 %21
  %23 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %22, i32 0, i32 0
  %24 = load float, float* %23, align 4
  %25 = fadd float %17, %24
  %26 = fmul float %25, 5.000000e-01
  store float %26, float* %9, align 4
  %27 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %28 = load i32, i32* %8, align 4
  %29 = mul nsw i32 1, %28
  %30 = sext i32 %29 to i64
  %31 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %27, i64 %30
  %32 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %31, i32 0, i32 1
  %33 = load float, float* %32, align 4
  %34 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %35 = load i32, i32* %8, align 4
  %36 = mul nsw i32 2, %35
  %37 = sext i32 %36 to i64
  %38 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %34, i64 %37
  %39 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %38, i32 0, i32 1
  %40 = load float, float* %39, align 4
  %41 = fadd float %33, %40
  %42 = fmul float %41, 5.000000e-01
  store float %42, float* %10, align 4
  %43 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %44 = load i32, i32* %8, align 4
  %45 = mul nsw i32 0, %44
  %46 = sext i32 %45 to i64
  %47 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %43, i64 %46
  %48 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %47, i32 0, i32 0
  %49 = load float, float* %48, align 4
  %50 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %51 = load i32, i32* %8, align 4
  %52 = mul nsw i32 1, %51
  %53 = sext i32 %52 to i64
  %54 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %50, i64 %53
  %55 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %54, i32 0, i32 0
  %56 = load float, float* %55, align 4
  %57 = fadd float %49, %56
  %58 = fmul float %57, 5.000000e-01
  %59 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %60 = load i32, i32* %8, align 4
  %61 = mul nsw i32 1, %60
  %62 = sext i32 %61 to i64
  %63 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %59, i64 %62
  %64 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %63, i32 0, i32 0
  store float %58, float* %64, align 4
  %65 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %66 = load i32, i32* %8, align 4
  %67 = mul nsw i32 0, %66
  %68 = sext i32 %67 to i64
  %69 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %65, i64 %68
  %70 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %69, i32 0, i32 1
  %71 = load float, float* %70, align 4
  %72 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %73 = load i32, i32* %8, align 4
  %74 = mul nsw i32 1, %73
  %75 = sext i32 %74 to i64
  %76 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %72, i64 %75
  %77 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %76, i32 0, i32 1
  %78 = load float, float* %77, align 4
  %79 = fadd float %71, %78
  %80 = fmul float %79, 5.000000e-01
  %81 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %82 = load i32, i32* %8, align 4
  %83 = mul nsw i32 1, %82
  %84 = sext i32 %83 to i64
  %85 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %81, i64 %84
  %86 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %85, i32 0, i32 1
  store float %80, float* %86, align 4
  %87 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %88 = load i32, i32* %8, align 4
  %89 = mul nsw i32 2, %88
  %90 = sext i32 %89 to i64
  %91 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %87, i64 %90
  %92 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %91, i32 0, i32 0
  %93 = load float, float* %92, align 4
  %94 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %95 = load i32, i32* %8, align 4
  %96 = mul nsw i32 3, %95
  %97 = sext i32 %96 to i64
  %98 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %94, i64 %97
  %99 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %98, i32 0, i32 0
  %100 = load float, float* %99, align 4
  %101 = fadd float %93, %100
  %102 = fmul float %101, 5.000000e-01
  %103 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %104 = load i32, i32* %8, align 4
  %105 = mul nsw i32 2, %104
  %106 = sext i32 %105 to i64
  %107 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %103, i64 %106
  %108 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %107, i32 0, i32 0
  store float %102, float* %108, align 4
  %109 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %110 = load i32, i32* %8, align 4
  %111 = mul nsw i32 2, %110
  %112 = sext i32 %111 to i64
  %113 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %109, i64 %112
  %114 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %113, i32 0, i32 1
  %115 = load float, float* %114, align 4
  %116 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %117 = load i32, i32* %8, align 4
  %118 = mul nsw i32 3, %117
  %119 = sext i32 %118 to i64
  %120 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %116, i64 %119
  %121 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %120, i32 0, i32 1
  %122 = load float, float* %121, align 4
  %123 = fadd float %115, %122
  %124 = fmul float %123, 5.000000e-01
  %125 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %126 = load i32, i32* %8, align 4
  %127 = mul nsw i32 2, %126
  %128 = sext i32 %127 to i64
  %129 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %125, i64 %128
  %130 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %129, i32 0, i32 1
  store float %124, float* %130, align 4
  %131 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %132 = load i32, i32* %8, align 4
  %133 = mul nsw i32 1, %132
  %134 = sext i32 %133 to i64
  %135 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %131, i64 %134
  %136 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %135, i32 0, i32 0
  %137 = load float, float* %136, align 4
  %138 = load float, float* %9, align 4
  %139 = fadd float %137, %138
  %140 = fmul float %139, 5.000000e-01
  %141 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %142 = load i32, i32* %8, align 4
  %143 = mul nsw i32 2, %142
  %144 = sext i32 %143 to i64
  %145 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %141, i64 %144
  %146 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %145, i32 0, i32 0
  store float %140, float* %146, align 4
  %147 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %148 = load i32, i32* %8, align 4
  %149 = mul nsw i32 1, %148
  %150 = sext i32 %149 to i64
  %151 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %147, i64 %150
  %152 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %151, i32 0, i32 1
  %153 = load float, float* %152, align 4
  %154 = load float, float* %10, align 4
  %155 = fadd float %153, %154
  %156 = fmul float %155, 5.000000e-01
  %157 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %158 = load i32, i32* %8, align 4
  %159 = mul nsw i32 2, %158
  %160 = sext i32 %159 to i64
  %161 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %157, i64 %160
  %162 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %161, i32 0, i32 1
  store float %156, float* %162, align 4
  %163 = load float, float* %9, align 4
  %164 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %165 = load i32, i32* %8, align 4
  %166 = mul nsw i32 2, %165
  %167 = sext i32 %166 to i64
  %168 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %164, i64 %167
  %169 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %168, i32 0, i32 0
  %170 = load float, float* %169, align 4
  %171 = fadd float %163, %170
  %172 = fmul float %171, 5.000000e-01
  %173 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %174 = load i32, i32* %8, align 4
  %175 = mul nsw i32 1, %174
  %176 = sext i32 %175 to i64
  %177 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %173, i64 %176
  %178 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %177, i32 0, i32 0
  store float %172, float* %178, align 4
  %179 = load float, float* %10, align 4
  %180 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %181 = load i32, i32* %8, align 4
  %182 = mul nsw i32 2, %181
  %183 = sext i32 %182 to i64
  %184 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %180, i64 %183
  %185 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %184, i32 0, i32 1
  %186 = load float, float* %185, align 4
  %187 = fadd float %179, %186
  %188 = fmul float %187, 5.000000e-01
  %189 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %190 = load i32, i32* %8, align 4
  %191 = mul nsw i32 1, %190
  %192 = sext i32 %191 to i64
  %193 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %189, i64 %192
  %194 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %193, i32 0, i32 1
  store float %188, float* %194, align 4
  %195 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %196 = load i32, i32* %8, align 4
  %197 = mul nsw i32 2, %196
  %198 = sext i32 %197 to i64
  %199 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %195, i64 %198
  %200 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %199, i32 0, i32 0
  %201 = load float, float* %200, align 4
  %202 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %203 = load i32, i32* %8, align 4
  %204 = mul nsw i32 1, %203
  %205 = sext i32 %204 to i64
  %206 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %202, i64 %205
  %207 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %206, i32 0, i32 0
  %208 = load float, float* %207, align 4
  %209 = fadd float %201, %208
  %210 = fmul float %209, 5.000000e-01
  %211 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %212 = load i32, i32* %8, align 4
  %213 = mul nsw i32 3, %212
  %214 = sext i32 %213 to i64
  %215 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %211, i64 %214
  %216 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %215, i32 0, i32 0
  store float %210, float* %216, align 4
  %217 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %218 = load i32, i32* %8, align 4
  %219 = mul nsw i32 2, %218
  %220 = sext i32 %219 to i64
  %221 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %217, i64 %220
  %222 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %221, i32 0, i32 1
  %223 = load float, float* %222, align 4
  %224 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %225 = load i32, i32* %8, align 4
  %226 = mul nsw i32 1, %225
  %227 = sext i32 %226 to i64
  %228 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %224, i64 %227
  %229 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %228, i32 0, i32 1
  %230 = load float, float* %229, align 4
  %231 = fadd float %223, %230
  %232 = fmul float %231, 5.000000e-01
  %233 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %234 = load i32, i32* %8, align 4
  %235 = mul nsw i32 3, %234
  %236 = sext i32 %235 to i64
  %237 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %233, i64 %236
  %238 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %237, i32 0, i32 1
  store float %232, float* %238, align 4
  %239 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %240 = load i32, i32* %8, align 4
  %241 = mul nsw i32 2, %240
  %242 = sext i32 %241 to i64
  %243 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %239, i64 %242
  %244 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %243, i32 0, i32 0
  %245 = load float, float* %244, align 4
  %246 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %247 = load i32, i32* %8, align 4
  %248 = mul nsw i32 1, %247
  %249 = sext i32 %248 to i64
  %250 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %246, i64 %249
  %251 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %250, i32 0, i32 0
  %252 = load float, float* %251, align 4
  %253 = fadd float %245, %252
  %254 = fmul float %253, 5.000000e-01
  %255 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %256 = load i32, i32* %8, align 4
  %257 = mul nsw i32 0, %256
  %258 = sext i32 %257 to i64
  %259 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %255, i64 %258
  %260 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %259, i32 0, i32 0
  store float %254, float* %260, align 4
  %261 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %262 = load i32, i32* %8, align 4
  %263 = mul nsw i32 2, %262
  %264 = sext i32 %263 to i64
  %265 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %261, i64 %264
  %266 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %265, i32 0, i32 1
  %267 = load float, float* %266, align 4
  %268 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %269 = load i32, i32* %8, align 4
  %270 = mul nsw i32 1, %269
  %271 = sext i32 %270 to i64
  %272 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %268, i64 %271
  %273 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %272, i32 0, i32 1
  %274 = load float, float* %273, align 4
  %275 = fadd float %267, %274
  %276 = fmul float %275, 5.000000e-01
  %277 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %278 = load i32, i32* %8, align 4
  %279 = mul nsw i32 0, %278
  %280 = sext i32 %279 to i64
  %281 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %277, i64 %280
  %282 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %281, i32 0, i32 1
  store float %276, float* %282, align 4
  %283 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %284 = load i32, i32* %8, align 4
  %285 = mul nsw i32 0, %284
  %286 = sext i32 %285 to i64
  %287 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %283, i64 %286
  %288 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %287, i32 0, i32 0
  %289 = load float, float* %288, align 4
  %290 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %291 = load i32, i32* %8, align 4
  %292 = mul nsw i32 0, %291
  %293 = sext i32 %292 to i64
  %294 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %290, i64 %293
  %295 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %294, i32 0, i32 0
  store float %289, float* %295, align 4
  %296 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %297 = load i32, i32* %8, align 4
  %298 = mul nsw i32 0, %297
  %299 = sext i32 %298 to i64
  %300 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %296, i64 %299
  %301 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %300, i32 0, i32 1
  %302 = load float, float* %301, align 4
  %303 = load %struct.TYPE_5__*, %struct.TYPE_5__** %6, align 8
  %304 = load i32, i32* %8, align 4
  %305 = mul nsw i32 0, %304
  %306 = sext i32 %305 to i64
  %307 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %303, i64 %306
  %308 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %307, i32 0, i32 1
  store float %302, float* %308, align 4
  %309 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %310 = load i32, i32* %8, align 4
  %311 = mul nsw i32 3, %310
  %312 = sext i32 %311 to i64
  %313 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %309, i64 %312
  %314 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %313, i32 0, i32 0
  %315 = load float, float* %314, align 4
  %316 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %317 = load i32, i32* %8, align 4
  %318 = mul nsw i32 3, %317
  %319 = sext i32 %318 to i64
  %320 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %316, i64 %319
  %321 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %320, i32 0, i32 0
  store float %315, float* %321, align 4
  %322 = load %struct.TYPE_5__*, %struct.TYPE_5__** %5, align 8
  %323 = load i32, i32* %8, align 4
  %324 = mul nsw i32 3, %323
  %325 = sext i32 %324 to i64
  %326 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %322, i64 %325
  %327 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %326, i32 0, i32 1
  %328 = load float, float* %327, align 4
  %329 = load %struct.TYPE_5__*, %struct.TYPE_5__** %7, align 8
  %330 = load i32, i32* %8, align 4
  %331 = mul nsw i32 3, %330
  %332 = sext i32 %331 to i64
  %333 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %329, i64 %332
  %334 = getelementptr inbounds %struct.TYPE_5__, %struct.TYPE_5__* %333, i32 0, i32 1
  store float %328, float* %334, align 4
  ret void
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
